Fix error message overflow [ci skip]

--- a/app/assets/stylesheets/thredded/base/_alerts.scss
+++ b/app/assets/stylesheets/thredded/base/_alerts.scss
@@ -17,6 +17,7 @@
 %thredded--alert {
   border: solid 1px;
   border-radius: 3px;
+  box-sizing: border-box;
   margin-bottom: $thredded-small-spacing;
   padding: $thredded-small-spacing;
   text-decoration: none;
